[gd_scene load_steps=13 format=3 uid="uid://windmere_destroyed_001"]

[ext_resource type="Script" path="res://scripts/levels/windmere.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/player/player.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/ui/hud.tscn" id="3"]
[ext_resource type="Texture2D" path="res://Sprite folders grab bag/skulls_spike1.png" id="4"]
[ext_resource type="Texture2D" path="res://Sprite folders grab bag/skulls_spike2.png" id="5"]
[ext_resource type="Texture2D" path="res://Sprite folders grab bag/skulls_spike3.png" id="6"]
[ext_resource type="Texture2D" path="res://Sprite folders grab bag/gore_pile1.png" id="7"]
[ext_resource type="Texture2D" path="res://Sprite folders grab bag/gore_pile2.png" id="8"]
[ext_resource type="Texture2D" path="res://Sprite folders grab bag/gore_totem1.png" id="9"]
[ext_resource type="Texture2D" path="res://Sprite folders grab bag/gore_totem2.png" id="10"]
[ext_resource type="Texture2D" path="res://Sprite folders grab bag/hanging_gore_totem1.png" id="11"]
[ext_resource type="Texture2D" path="res://Sprite folders grab bag/hanging_gore_totem2.png" id="12"]
[ext_resource type="Texture2D" path="res://Sprite folders grab bag/hanging_gore_totem3.png" id="13"]

[node name="Windmere" type="Node3D"]
script = ExtResource("1")

[node name="Player" parent="." instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 22)

[node name="HUD" parent="." instance=ExtResource("3")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866, -0.433, 0.25, 0, 0.5, 0.866, -0.5, -0.75, 0.433, 0, 20, 0)
light_color = Color(0.85, 0.75, 0.6, 1)
light_energy = 0.7
shadow_enabled = true

[node name="Terrain" type="Node3D" parent="."]

[node name="Ground" type="CSGBox3D" parent="Terrain"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
use_collision = true
size = Vector3(50, 2, 50)

[node name="VillageClearing" type="CSGCylinder3D" parent="Terrain"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
use_collision = true
radius = 15.0
height = 0.15

[node name="Hills" type="Node3D" parent="Terrain"]

[node name="Hill_0" type="CSGCylinder3D" parent="Terrain/Hills"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 1.25, -15)
use_collision = true
radius = 8.0
height = 2.5

[node name="Hill_1" type="CSGCylinder3D" parent="Terrain/Hills"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 1.5, -18)
use_collision = true
radius = 10.0
height = 3.0

[node name="Hill_2" type="CSGCylinder3D" parent="Terrain/Hills"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 1.0, 12)
use_collision = true
radius = 7.0
height = 2.0

[node name="Hill_3" type="CSGCylinder3D" parent="Terrain/Hills"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 1.4, 16)
use_collision = true
radius = 9.0
height = 2.8

[node name="Hill_4" type="CSGCylinder3D" parent="Terrain/Hills"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0.9, -22)
use_collision = true
radius = 6.0
height = 1.8

[node name="Hill_5" type="CSGCylinder3D" parent="Terrain/Hills"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 1.1, 22)
use_collision = true
radius = 7.5
height = 2.2

[node name="Hill_6" type="CSGCylinder3D" parent="Terrain/Hills"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22, 0.75, -5)
use_collision = true
radius = 5.5
height = 1.5

[node name="Hill_7" type="CSGCylinder3D" parent="Terrain/Hills"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 1.0, 0)
use_collision = true
radius = 6.5
height = 2.0

[node name="Buildings" type="Node3D" parent="."]

[node name="Farmhouse_1" type="Node3D" parent="Buildings"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, -5)

[node name="Foundation" type="CSGBox3D" parent="Buildings/Farmhouse_1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
use_collision = true
size = Vector3(6.5, 0.4, 5.5)

[node name="Wall_W" type="CSGBox3D" parent="Buildings/Farmhouse_1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1.0, 0)
use_collision = true
size = Vector3(0.3, 1.2, 3.0)

[node name="Wall_E" type="CSGBox3D" parent="Buildings/Farmhouse_1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0.8, 0)
use_collision = true
size = Vector3(0.3, 0.8, 2.0)

[node name="Wall_N" type="CSGBox3D" parent="Buildings/Farmhouse_1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, -2.5)
use_collision = true
size = Vector3(3.0, 1.0, 0.3)

[node name="Beam_0" type="CSGBox3D" parent="Buildings/Farmhouse_1"]
transform = Transform3D(0.98, 0.1, -0.17, -0.1, 0.99, 0.1, 0.18, -0.08, 0.98, 0.5, 0.3, 0)
use_collision = true
size = Vector3(0.15, 0.1, 2.8)

[node name="Beam_1" type="CSGBox3D" parent="Buildings/Farmhouse_1"]
transform = Transform3D(0.95, 0.2, 0.23, -0.21, 0.98, 0.05, -0.22, -0.1, 0.97, -1.0, 0.4, 0.5)
use_collision = true
size = Vector3(0.15, 0.1, 2.5)

[node name="AshPile" type="CSGCylinder3D" parent="Buildings/Farmhouse_1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0.15, -0.2)
radius = 2.4
height = 0.3

[node name="Farmhouse_2" type="Node3D" parent="Buildings"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -8)

[node name="Foundation" type="CSGBox3D" parent="Buildings/Farmhouse_2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
use_collision = true
size = Vector3(8.5, 0.4, 7.5)

[node name="Wall_W" type="CSGBox3D" parent="Buildings/Farmhouse_2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 1.2, 0)
use_collision = true
size = Vector3(0.3, 1.4, 4.2)

[node name="Wall_E" type="CSGBox3D" parent="Buildings/Farmhouse_2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0.9, 0)
use_collision = true
size = Vector3(0.3, 1.0, 2.8)

[node name="Wall_N" type="CSGBox3D" parent="Buildings/Farmhouse_2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, -3.5)
use_collision = true
size = Vector3(4.0, 0.8, 0.3)

[node name="Beam_0" type="CSGBox3D" parent="Buildings/Farmhouse_2"]
transform = Transform3D(0.96, 0.15, 0.22, -0.16, 0.99, 0, -0.22, 0.03, 0.98, 0.8, 0.35, 0)
use_collision = true
size = Vector3(0.15, 0.1, 4.5)

[node name="Beam_1" type="CSGBox3D" parent="Buildings/Farmhouse_2"]
transform = Transform3D(0.98, -0.12, 0.17, 0.11, 0.99, 0.08, -0.18, -0.06, 0.98, -1.5, 0.28, -1)
use_collision = true
size = Vector3(0.15, 0.1, 3.8)

[node name="AshPile" type="CSGCylinder3D" parent="Buildings/Farmhouse_2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.15, 0.3)
radius = 3.2
height = 0.3

[node name="Farmhouse_3" type="Node3D" parent="Buildings"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 7)

[node name="Foundation" type="CSGBox3D" parent="Buildings/Farmhouse_3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
use_collision = true
size = Vector3(4.5, 0.4, 4.5)

[node name="Wall_W" type="CSGBox3D" parent="Buildings/Farmhouse_3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.8, 0)
use_collision = true
size = Vector3(0.3, 0.9, 2.4)

[node name="Wall_N" type="CSGBox3D" parent="Buildings/Farmhouse_3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, -2)
use_collision = true
size = Vector3(2.0, 0.7, 0.3)

[node name="AshPile" type="CSGCylinder3D" parent="Buildings/Farmhouse_3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0.15, 0)
radius = 1.6
height = 0.3

[node name="Barn" type="Node3D" parent="Buildings"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 5)

[node name="Foundation" type="CSGBox3D" parent="Buildings/Barn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
use_collision = true
size = Vector3(8.5, 0.4, 7.5)

[node name="Wall_W" type="CSGBox3D" parent="Buildings/Barn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 1.1, 0)
use_collision = true
size = Vector3(0.3, 1.3, 3.6)

[node name="Wall_E" type="CSGBox3D" parent="Buildings/Barn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0.85, 0)
use_collision = true
size = Vector3(0.3, 0.9, 2.4)

[node name="Wall_N" type="CSGBox3D" parent="Buildings/Barn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, -3.5)
use_collision = true
size = Vector3(3.6, 0.6, 0.3)

[node name="AshPile" type="CSGCylinder3D" parent="Buildings/Barn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.15, -0.5)
radius = 3.2
height = 0.3

[node name="Storage_Shed" type="Node3D" parent="Buildings"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, 0)

[node name="Foundation" type="CSGBox3D" parent="Buildings/Storage_Shed"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
use_collision = true
size = Vector3(4.5, 0.4, 4.5)

[node name="Wall_W" type="CSGBox3D" parent="Buildings/Storage_Shed"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.75, 0)
use_collision = true
size = Vector3(0.3, 0.8, 2.4)

[node name="AshPile" type="CSGCylinder3D" parent="Buildings/Storage_Shed"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0.2)
radius = 1.6
height = 0.3

[node name="Inn_Ruins" type="Node3D" parent="Buildings"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -12)

[node name="Foundation" type="CSGBox3D" parent="Buildings/Inn_Ruins"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
use_collision = true
size = Vector3(8.5, 0.4, 7.5)

[node name="Wall_W" type="CSGBox3D" parent="Buildings/Inn_Ruins"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 1.3, 0)
use_collision = true
size = Vector3(0.3, 1.5, 3.6)

[node name="Wall_E" type="CSGBox3D" parent="Buildings/Inn_Ruins"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 1.0, 0)
use_collision = true
size = Vector3(0.3, 1.1, 2.8)

[node name="Wall_N" type="CSGBox3D" parent="Buildings/Inn_Ruins"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, -3.5)
use_collision = true
size = Vector3(4.0, 1.0, 0.3)

[node name="Beam_0" type="CSGBox3D" parent="Buildings/Inn_Ruins"]
transform = Transform3D(0.97, 0.1, 0.22, -0.12, 0.99, 0.08, -0.21, -0.1, 0.97, 1.0, 0.32, 0.5)
use_collision = true
size = Vector3(0.15, 0.1, 4.2)

[node name="AshPile" type="CSGCylinder3D" parent="Buildings/Inn_Ruins"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0)
radius = 3.2
height = 0.3

[node name="Debris" type="Node3D" parent="."]

[node name="BurnedField_1" type="Node3D" parent="Debris"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, 10)

[node name="ScorchedEarth" type="CSGBox3D" parent="Debris/BurnedField_1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
size = Vector3(8, 0.1, 6)

[node name="BurnedField_2" type="Node3D" parent="Debris"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, -15)

[node name="ScorchedEarth" type="CSGBox3D" parent="Debris/BurnedField_2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
size = Vector3(6, 0.1, 8)

[node name="Bodies" type="Node3D" parent="."]

[node name="Skeleton_0" type="Node3D" parent="Bodies"]
transform = Transform3D(0.94, 0, 0.34, 0, 1, 0, -0.34, 0, 0.94, -6, 0, -3)

[node name="Torso" type="CSGBox3D" parent="Bodies/Skeleton_0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.08, 0)
size = Vector3(0.4, 0.15, 0.6)

[node name="Skull" type="CSGSphere3D" parent="Bodies/Skeleton_0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.12, 0.35)
radius = 0.12

[node name="Skeleton_1" type="Node3D" parent="Bodies"]
transform = Transform3D(0.87, 0, 0.5, 0, 1, 0, -0.5, 0, 0.87, 4, 0, -6)

[node name="Torso" type="CSGBox3D" parent="Bodies/Skeleton_1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.08, 0)
size = Vector3(0.4, 0.15, 0.6)

[node name="Skull" type="CSGSphere3D" parent="Bodies/Skeleton_1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.12, 0.35)
radius = 0.12

[node name="Skeleton_2" type="Node3D" parent="Bodies"]
transform = Transform3D(0.77, 0, 0.64, 0, 1, 0, -0.64, 0, 0.77, -3, 0, 5)

[node name="Torso" type="CSGBox3D" parent="Bodies/Skeleton_2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.08, 0)
size = Vector3(0.4, 0.15, 0.6)

[node name="Skull" type="CSGSphere3D" parent="Bodies/Skeleton_2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.12, 0.35)
radius = 0.12

[node name="Skeleton_3" type="Node3D" parent="Bodies"]
transform = Transform3D(0.64, 0, 0.77, 0, 1, 0, -0.77, 0, 0.64, 7, 0, 3)

[node name="Torso" type="CSGBox3D" parent="Bodies/Skeleton_3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.08, 0)
size = Vector3(0.4, 0.15, 0.6)

[node name="Skull" type="CSGSphere3D" parent="Bodies/Skeleton_3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.12, 0.35)
radius = 0.12

[node name="Skeleton_4" type="Node3D" parent="Bodies"]
transform = Transform3D(0.5, 0, 0.87, 0, 1, 0, -0.87, 0, 0.5, -10, 0, -8)

[node name="Torso" type="CSGBox3D" parent="Bodies/Skeleton_4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.08, 0)
size = Vector3(0.4, 0.15, 0.6)

[node name="Skull" type="CSGSphere3D" parent="Bodies/Skeleton_4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.12, 0.35)
radius = 0.12

[node name="Skeleton_5" type="Node3D" parent="Bodies"]
transform = Transform3D(0.34, 0, 0.94, 0, 1, 0, -0.94, 0, 0.34, 2, 0, -10)

[node name="Torso" type="CSGBox3D" parent="Bodies/Skeleton_5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.08, 0)
size = Vector3(0.4, 0.15, 0.6)

[node name="Skull" type="CSGSphere3D" parent="Bodies/Skeleton_5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.12, 0.35)
radius = 0.12

[node name="Body_0" type="Node3D" parent="Bodies"]
transform = Transform3D(0.17, 0, 0.98, 0, 1, 0, -0.98, 0, 0.17, -8, 0, 8)

[node name="Torso" type="CSGCapsule3D" parent="Bodies/Body_0"]
transform = Transform3D(1, 0, 0, 0, 0, -1, 0, 1, 0, 0, 0.15, 0)
radius = 0.2
height = 0.8

[node name="BloodPool" type="CSGCylinder3D" parent="Bodies/Body_0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 0.01, 0)
radius = 0.4
height = 0.02

[node name="Body_1" type="Node3D" parent="Bodies"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 10, 0, -2)

[node name="Torso" type="CSGCapsule3D" parent="Bodies/Body_1"]
transform = Transform3D(1, 0, 0, 0, 0, -1, 0, 1, 0, 0, 0.15, 0)
radius = 0.2
height = 0.8

[node name="BloodPool" type="CSGCylinder3D" parent="Bodies/Body_1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.15, 0.01, 0.1)
radius = 0.5
height = 0.02

[node name="Body_2" type="Node3D" parent="Bodies"]
transform = Transform3D(-0.17, 0, 0.98, 0, 1, 0, -0.98, 0, -0.17, 0, 0, 0)

[node name="Torso" type="CSGCapsule3D" parent="Bodies/Body_2"]
transform = Transform3D(1, 0, 0, 0, 0, -1, 0, 1, 0, 0, 0.15, 0)
radius = 0.2
height = 0.8

[node name="BloodPool" type="CSGCylinder3D" parent="Bodies/Body_2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, -0.1)
radius = 0.6
height = 0.02

[node name="BloodPools" type="Node3D" parent="Bodies"]

[node name="BloodPool_0" type="CSGCylinder3D" parent="Bodies/BloodPools"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0.01, -2)
radius = 0.8
height = 0.02

[node name="BloodPool_1" type="CSGCylinder3D" parent="Bodies/BloodPools"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0.01, 6)
radius = 1.0
height = 0.02

[node name="BloodPool_2" type="CSGCylinder3D" parent="Bodies/BloodPools"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0.01, 4)
radius = 0.6
height = 0.02

[node name="BloodPool_3" type="CSGCylinder3D" parent="Bodies/BloodPools"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0.01, -8)
radius = 0.9
height = 0.02

[node name="BloodPool_4" type="CSGCylinder3D" parent="Bodies/BloodPools"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.01, 12)
radius = 0.7
height = 0.02

[node name="GoreDecorations" type="Node3D" parent="."]

[node name="SkullSpike_0" type="Sprite3D" parent="GoreDecorations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, -2)
pixel_size = 0.025
billboard = 1
transparent = true
alpha_cut = 2
alpha_scissor_threshold = 0.5
texture = ExtResource("4")

[node name="SkullSpike_1" type="Sprite3D" parent="GoreDecorations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -12)
pixel_size = 0.025
billboard = 1
transparent = true
alpha_cut = 2
alpha_scissor_threshold = 0.5
texture = ExtResource("5")

[node name="SkullSpike_2" type="Sprite3D" parent="GoreDecorations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 10)
pixel_size = 0.025
billboard = 1
transparent = true
alpha_cut = 2
alpha_scissor_threshold = 0.5
texture = ExtResource("6")

[node name="SkullSpike_3" type="Sprite3D" parent="GoreDecorations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, 8)
pixel_size = 0.025
billboard = 1
transparent = true
alpha_cut = 2
alpha_scissor_threshold = 0.5
texture = ExtResource("4")

[node name="SkullSpike_4" type="Sprite3D" parent="GoreDecorations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, 5)
pixel_size = 0.025
billboard = 1
transparent = true
alpha_cut = 2
alpha_scissor_threshold = 0.5
texture = ExtResource("5")

[node name="SkullSpike_5" type="Sprite3D" parent="GoreDecorations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -18)
pixel_size = 0.025
billboard = 1
transparent = true
alpha_cut = 2
alpha_scissor_threshold = 0.5
texture = ExtResource("6")

[node name="SkullSpike_6" type="Sprite3D" parent="GoreDecorations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 3)
pixel_size = 0.025
billboard = 1
transparent = true
alpha_cut = 2
alpha_scissor_threshold = 0.5
texture = ExtResource("4")

[node name="GorePile_0" type="Sprite3D" parent="GoreDecorations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, -4)
pixel_size = 0.02
billboard = 1
transparent = true
alpha_cut = 2
alpha_scissor_threshold = 0.5
texture = ExtResource("7")

[node name="GorePile_1" type="Sprite3D" parent="GoreDecorations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -7)
pixel_size = 0.02
billboard = 1
transparent = true
alpha_cut = 2
alpha_scissor_threshold = 0.5
texture = ExtResource("8")

[node name="GorePile_2" type="Sprite3D" parent="GoreDecorations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 6)
pixel_size = 0.02
billboard = 1
transparent = true
alpha_cut = 2
alpha_scissor_threshold = 0.5
texture = ExtResource("7")

[node name="GorePile_3" type="Sprite3D" parent="GoreDecorations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 4)
pixel_size = 0.02
billboard = 1
transparent = true
alpha_cut = 2
alpha_scissor_threshold = 0.5
texture = ExtResource("8")

[node name="GorePile_4" type="Sprite3D" parent="GoreDecorations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -9)
pixel_size = 0.02
billboard = 1
transparent = true
alpha_cut = 2
alpha_scissor_threshold = 0.5
texture = ExtResource("7")

[node name="GoreTotem_0" type="Sprite3D" parent="GoreDecorations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 0, 0)
pixel_size = 0.035
billboard = 1
transparent = true
alpha_cut = 2
alpha_scissor_threshold = 0.5
texture = ExtResource("9")

[node name="GoreTotem_1" type="Sprite3D" parent="GoreDecorations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 0, 0)
pixel_size = 0.035
billboard = 1
transparent = true
alpha_cut = 2
alpha_scissor_threshold = 0.5
texture = ExtResource("10")

[node name="GoreTotem_2" type="Sprite3D" parent="GoreDecorations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 15)
pixel_size = 0.035
billboard = 1
transparent = true
alpha_cut = 2
alpha_scissor_threshold = 0.5
texture = ExtResource("9")

[node name="GoreTotem_3" type="Sprite3D" parent="GoreDecorations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, -15)
pixel_size = 0.035
billboard = 1
transparent = true
alpha_cut = 2
alpha_scissor_threshold = 0.5
texture = ExtResource("10")

[node name="HangingTotem_0" type="Sprite3D" parent="GoreDecorations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 2, -5)
pixel_size = 0.03
billboard = 1
transparent = true
alpha_cut = 2
alpha_scissor_threshold = 0.5
texture = ExtResource("11")

[node name="HangingTotem_1" type="Sprite3D" parent="GoreDecorations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 1.8, -8)
pixel_size = 0.03
billboard = 1
transparent = true
alpha_cut = 2
alpha_scissor_threshold = 0.5
texture = ExtResource("12")

[node name="HangingTotem_2" type="Sprite3D" parent="GoreDecorations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2, -12)
pixel_size = 0.03
billboard = 1
transparent = true
alpha_cut = 2
alpha_scissor_threshold = 0.5
texture = ExtResource("13")

[node name="Lights" type="Node3D" parent="."]

[node name="FireLight_0" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 1.5, -4)
light_color = Color(0.9, 0.5, 0.2, 1)
light_energy = 1.0
omni_range = 6

[node name="FireLight_1" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1.2, -7)
light_color = Color(0.85, 0.45, 0.15, 1)
light_energy = 0.9
omni_range = 6

[node name="FireLight_2" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 1.0, 6)
light_color = Color(0.9, 0.55, 0.25, 1)
light_energy = 0.8
omni_range = 6

[node name="SpawnPoints" type="Node3D" parent="."]

[node name="SpawnPoint_default" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 22)

[node name="SpawnPoint_from_wilderness" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 22)

[node name="SpawnPoint_from_north" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, -22)

[node name="SpawnPoint_from_south" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 22)

[node name="SpawnPoint_from_east" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0.1, 0)

[node name="SpawnPoint_from_west" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22, 0.1, 0)

[node name="SpawnPoint_from_dusty_hollow" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0.1, 10)

[node name="SpawnPoint_from_graveyard" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22, 0.1, -10)

[node name="EnemySpawnPoints" type="Node3D" parent="."]

[node name="Infantry_0" type="Marker3D" parent="EnemySpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -5)

[node name="Infantry_1" type="Marker3D" parent="EnemySpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, -10)

[node name="Infantry_2" type="Marker3D" parent="EnemySpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 8)

[node name="Infantry_3" type="Marker3D" parent="EnemySpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 5)

[node name="Berserker_0" type="Marker3D" parent="EnemySpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -15)

[node name="Berserker_1" type="Marker3D" parent="EnemySpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, 0)

[node name="Archer_0" type="Marker3D" parent="EnemySpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16, 1.5, -12)

[node name="Archer_1" type="Marker3D" parent="EnemySpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 2.0, -15)

[node name="Archer_2" type="Marker3D" parent="EnemySpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 1.8, 14)

[node name="Cavalry_0" type="Marker3D" parent="EnemySpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="Cavalry_1" type="Marker3D" parent="EnemySpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, -8)

[node name="Warbanner_0" type="Marker3D" parent="EnemySpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -5)

[node name="Interactables" type="Node3D" parent="."]

[node name="Chest_TengerSupply" type="Marker3D" parent="Interactables"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -6)

[node name="Chest_HiddenCellar" type="Marker3D" parent="Interactables"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, -0.3, -4)

[node name="Chest_MerchantGoods" type="Marker3D" parent="Interactables"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -11)

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
